# gatsby-exercise

./: .gitignore  .pre-commit-config.yaml  .prettierignore  README.md  gatsby-config.ts  package-lock.json  package.json  pyproject.toml
.github/workflows/: build-and-deploy.yml  build.yml  deploy.yml  test.yml
src/pages/: index.tsx
