[tool.poetry]
name = "gatsby-exercise"
version = "0.1.0"
description = ""
authors = ["TJ Mendoza"]
readme = "README.md"
packages = [{include = "gatsby_exercise"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
commitizen = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
